# recipe_recommendation_system

./: .env.sample  README.md  main.py  pyproject.toml
scr/: agent.py  models.py  prompts.py
src/: agent.py  config.py  models.py  prompts.py  test_agent.py
src/tools/: search_for_recipe_on_web.py
